# another-tp-game

./: CMakeLists.txt  ConsoleGame.cpp  ConsoleGame.h  ConsolePlayer.cpp  ConsolePlayer.h  DataTree.cpp  DataTree.h  EconomicEntity.cpp  EconomicEntity.h  Execute.cpp  Execute.h  Factor.cpp  Factor.h  FactorClass.cpp  FactorClass.h  Game.cpp  Game.h  Move.cpp  Move.h  Moves.cpp  Player.cpp  Player.h  README.md  Resource.cpp  Resource.h  Squad.cpp  Squad.h  Time.cpp  Time.h  Token.cpp  Token.h  Unit.cpp  Unit.h  UnitClass.cpp  UnitClass.h  WarEntity.cpp  WarEntity.h  XMLHandler.cpp  XMLHandler.h  factors.xml  (+4 more)
